Fri Dec 14 15:58:06 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch], gnome-ditem-edit.[ch]: added some needed
	  API.  One for setting location as file, and setting a directory
	  only editor and setting initial type string.

Sun Dec 09 15:22:03 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: actually set the real_argc for launching and
	  also actually add elements to the argv array

Sat Dec 08 11:27:35 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Make launching standards compliant and
	  realize that the standard sucks donkeyballs.  It's utterly
	  ambiguous.  I try to handle the corner cases but I dunno if I'm
	  right.  Needs more clarification.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* gnome-desktop-item.c (gnome_desktop_item_new_from_uri):
	Remove old stat code.
	(gnome_desktop_item_save): Don't do magic non-abs path stuff
	to the location, it is supposed to be an uri.
	(gnome_desktop_item_get_file_status):
	Use gnome-vfs instead of stat.

Sun Dec  2 13:05:05 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am gnome-desktop.pc.in: Add a pc
	file for this library.

2001-11-30  Seth Nickell  <snickell@stanford.edu>

	* gnome-desktop-item.c: (get_encoding):

	Return "MIXED_ENCODING" when we aren't sure
	what the type is, at least for now. Our detection
	functions also need to be rewritten to use GnomeVFS
	fully. They assume "uri:/foo" -> "/foo".

2001-11-28  Anders Carlsson  <andersca@gnu.org>

	* gnome-hint.h: Inherit from GtkDialog instead of
	GnomeDialog.

	* gnome-hint.c: Likewise.

Tue Nov 27 00:43:13 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: look for kde icons in the same way the
	  panel does.  This requires more thought, kde icons are
	  no longer a simple task.

Tue Nov 20 19:37:53 2001  Owen Taylor  <otaylor@redhat.com>

	* gnome-desktop-item.h: Change include to glib-object.h.

Mon, 19 Nov 2001 01:47:56 -0500 Frank Belew <frb@ximian.com>
